Amarok ChangeLog
================
(C) 2002-2009 the Amarok authors.


VERSION 2.2.2
  FEATURES
    * Rewrote podcast feed parser to correctly parse XML. Now even RSS 1.0 and
      Atom feeds are supported. Patches by Mathias Panzenböck.
    * Rating of playlist items can now be filtered, using "rating:#" notation.
    * When removing a podcast subscription, ask for confirmation and offer to delete the
      downloaded episodes. Patch by Frank Meerkötter.
    * Font of lyrics applet is configurable in the lyrics applet setting page.
    * BPM editing, sorting, and filtering have been implemented. (BR 214056)
      Patch by Pierre Dumuid <pmdumuid@gmail.com>.
    * Made it possible to change a podcast channel's URL. (BR 195204)
    * Also support feed:// urls for subscribing to podcasts.
    * Limited the number of simultaneous podcast updates and downloads to four.
      This can be configured separately in the "amarokrc" configuration file.
    * Import podcast subscriptions from OPML.
    * Show HTML info for podcast channels that support this. Patches by
      Mathias Panzenböck. (BR 193357)
    * Ampache Service now shows Service info from last.fm
    * Moodbar support is back. Can be shown in progress bar or in the playlist.
      The 4 visual styles from Amarok 1 (normal, angry, frozen and happy) are 
      all supported. This feature requires that moodbars files are already present.
    * Cover images can now be fetched via HTTP. (BR 176899)
    * Custom Labels has returned.  Assign labels from the tag dialog, and
      see them in the tag dialog or in the playlist.
    * Fetch labels from last.fm for some tracks [UPDATE THIS ONCE WE FIGURE OUT WHEN TO DO SO]
    * Pressing F2 when focused in the lyrics applet jumps into editing mode.

  CHANGES:
    * New menu to add applets to the context view.
    * Added rating filter to collection browser's edit filter dialog.
    * Added bitrate and sample rate filters to collection browser's text input area.