@@ -5,6 +5,8 @@ Amarok ChangeLog
 
 VERSION 2.2.2
   FEATURES
+    * Dailymotion video can now be rendered within the applet in HQ if HQ is selected 
+      in the video applet settings.
     * Rewrote podcast feed parser to correctly parse XML. Now even RSS 1.0 and
       Atom feeds are supported. Patches by Mathias Panzenböck.
     * Rating of playlist items can now be filtered, using "rating:#" notation.
@@ -59,6 +61,8 @@ VERSION 2.2.2
     * Improved automatic resizing of lyrics and suggestions in the context applet.
 
   BUGFIXES:
+    * Fixed dailymotion video file direct link retrieving not working.
+    * Fixed wikipedia engine not parsing correctly URL containing ":" (BR 209397)
     * Fixed several issues with loading and saving timecode tracks to and from
       playlists.
     * Fixed crash when copying tracks to MP3tunes music locker. (BR 214686)
